--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "axios": "^0.19.0",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "react-select": "^4.3.1",
+
+    "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.73",
+    "@mui/material": "^5.5.1",
+    "@mui/styles": "^5.5.1",
+    "@mui/x-date-pickers": "^5.0.0-beta.1"
   },
   "scripts": {
     "start": "react-scripts start",
