--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "poseai",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.10.5",
