--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.8",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
